--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "currency-converter-project",
   "version": "0.1.0",
+  "homepage": "https://AleksKoldashov.github.io/currency-converter",
   "private": true,
   "dependencies": {
     "@tanstack/react-query": "^5.51.23",
